Revert "Revert "CAT LETS GOOOOO""
This reverts commit f7e2a4cca364b6649f21426e70557c312b2c5fa0.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
 
         <h2>welcome to my (bad) website!</h2>
 
-        <img src="https://cdn.discordapp.com/emojis/810185394947227658.png?v=1" width="500" height="500"/><marquee scrollamount="70"></marquee> 
+        <script>
+            function play(){
+                 var audio = document.getElementById("audio");
+                 audio.play();
+                           }
+             </script>
+          
+          <img src="https://cdn.discordapp.com/emojis/810185394947227658.png?v=1" value="PLAY"  onclick="play()" height="500" width="500">
+          <audio id="audio" src="https://cdn.discordapp.com/attachments/711745107446988851/822642703064891402/purr.mp3" ></audio>
 
         <h2>PIXELATED CAT IMAGE POGGERS</h2>
 
