--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 
 <html>
     <head>
+        <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-P4GVQBL');</script>
+    <!-- End Google Tag Manager -->
         <meta charset="utf=8">
         <meta name="viewport" content="widthy=device-width, initial-scale=1">
         <title>website!!1!</title>
@@ -21,11 +28,25 @@
         </style>
     </head>
     <body>
+        <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P4GVQBL"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
 
         <h2>welcome to my (bad) website!</h2>
 
-        
+        <script>
+            function play(){
+                 var audio = document.getElementById("audio");
+                 audio.play();
+                           }
+             </script>
+          
+          <img src="https://cdn.discordapp.com/emojis/810185394947227658.png?v=1" value="PLAY"  onclick="play()" height="500" width="500">
+          <audio id="audio" src="https://cdn.discordapp.com/attachments/711745107446988851/822642703064891402/purr.mp3" ></audio>
+
+        <h2>PIXELATED CAT IMAGE POGGERS</h2>
 
     </body>    
 </html>
