--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
         <meta name="viewport" content="widthy=device-width, initial-scale=1">
         <title>website!!1!</title>
         <style>
+           @import url('https://fonts.googleapis.com/css?family=Quicksand');
             h2 {
                 color: rgb(0, 175, 166);
                 text-align: center;
-                font-family: sans-serif;
+                font-family: Quicksand;
             }
-        </style>
-        <style>
           img  {
             display: block;
             margin-left: auto;
             margin-right: auto;
             }
+        * { cursor: url(https://cdn.discordapp.com/attachments/735354860962185239/822662950702809098/Wii_Cursor.cur), default;}
         </style>
     </head>
     <body>
