--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 
+<!-- What's that pair that packs that punch?
+The unique taste so creamy with a crunch
+P B and C is what I'm thinking of!
+And it only can be found in my reeses p.
+Peanut butter chocolate
+Great when seperate
+But when they combine
+They make the morning time epic!
+R double E S E S YES!
+...
+P to the U double F S YES! -->
+
 <html>
     <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -27,6 +39,16 @@
             margin-right: auto;
             }
         * { cursor: url(https://cdn.discordapp.com/attachments/735354860962185239/822662950702809098/Wii_Cursor.cur), default;}
+            .audio-container {
+                display: flex;
+                 justify-content: center;
+                 align-items: center;
+            }
+                .funky-music {
+                color: rgb(0, 175, 166);
+                text-align: center;
+                font-family: Quicksand;
+            }
         </style>
     </head>
     <body>
@@ -45,6 +67,17 @@
           <audio id="audio" src="https://cdn.discordapp.com/attachments/711745107446988851/822642703064891402/purr.mp3" ></audio>
 
         <h2>PIXELATED CAT IMAGE POGGERS</h2>
+
+        <div class='funky-music'
+             <h4><b>play this music for epicness</b></h4>
+            </div>
+            &nbsp;
+        <div class='audio-container'>
+            <audio controls autoplay>
+                <source src="https://cdn.discordapp.com/attachments/735354860962185239/822664840236892181/Nintendo_3DS_Music_-_Friend_List.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+              </audio>
+         </div>
 
     </body>    
 </html>
