--- a/index.html
+++ b/index.html
@@ -49,9 +49,22 @@ P to the U double F S YES! -->
                 text-align: center;
                 font-family: Quicksand;
             }
+            @import url('https://fonts.googleapis.com/css?family=Montserrat|Open+Sans');
+                 .scrolling-text {
+                color: rgb(0, 0, 0);
+                text-align: center;
+                font-family: 'Open Sans', sans-serif;
+            }
         </style>
     </head>
     <body>
+
+        <div class="scrolling-text">
+        <marquee behavior="scroll" direction="left">i could prob use this for like notifications or something lol</marquee>
+        </div>
+        <div class="fast-scrolling-text">
+            <marquee behavior="scroll" direction="left" scrollamount="100">NYOOOOOOOOOOOOOOOOOOOM</marquee>
+            </div>
 
 
         <h2>welcome to my (bad) website!</h2>
