--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ P to the U double F S YES! -->
                 font-family: 'Quicksand';
             }
         </style>
+        <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/735354860962185239/822702118585892874/favicon.png"
     </head>
     <body>
         <div="pain">
