--- a/index.html
+++ b/index.html
@@ -1,37 +1,104 @@
 <!DOCTYPE html>
 
+<!-- What's that pair that packs that punch?
+The unique taste so creamy with a crunch
+P B and C is what I'm thinking of!
+And it only can be found in my reeses p.
+Peanut butter chocolate
+Great when seperate
+But when they combine
+They make the morning time epic!
+R double E S E S YES!
+...
+P to the U double F S YES! -->
+
 <html>
     <head>
-        <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-P4GVQBL');</script>
-    <!-- End Google Tag Manager -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DGG831PPRZ');
+</script>
         <meta charset="utf=8">
         <meta name="viewport" content="widthy=device-width, initial-scale=1">
         <title>website!!1!</title>
         <style>
+           @import url('https://fonts.googleapis.com/css?family=Quicksand');
             h2 {
                 color: rgb(0, 175, 166);
                 text-align: center;
-                font-family: sans-serif;
+                font-family: Quicksand;
             }
-        </style>
-        <style>
+            h5 {
+                font-family: Quicksand;
+            }
           img  {
             display: block;
             margin-left: auto;
             margin-right: auto;
             }
+        * { cursor: url(https://cdn.discordapp.com/attachments/735354860962185239/822662950702809098/Wii_Cursor.cur), default;}
+            .audio-container {
+                display: flex;
+                 justify-content: center;
+                 align-items: center;
+            }
+                .funky-music {
+                color: rgb(0, 175, 166);
+                text-align: center;
+                font-family: Quicksand;
+            }
+                 .scrolling-text {
+                text-align: center;
+                font-family: 'Quicksand';
+            }
+            body {
+            padding: 25px;
+            background-color: white;
+            color: black;
+            
+            font-size: 25px;
+            }
+
+            .dark-mode {
+            background-color: black;
+            color: white;
+            }
+            .fast-scrolling-text {
+                text-align: center;
+                font-family: 'Quicksand';
+            }
+            .pain {
+                font-family: 'Quicksand';
+            }
         </style>
+        <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/735354860962185239/822702118585892874/favicon.png"
     </head>
     <body>
-        <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P4GVQBL"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+        <div="pain">
+            <h5><b>WHY IS IT SO HARD TO CENTER A FRIGGIN BUTTON</b></h5>
+        </div>
+
+        <div='dark-mode-button'>
+        <button onclick="myFunction()">Toggle dark mode</button>
+    </div>
+
+        <script>function myFunction() {
+    var element = document.body;
+    element.classList.toggle("dark-mode");
+    }     
+    </script>
+        
+        <div class="scrolling-text">
+        <marquee behavior="scroll" direction="left">i could probably use this for like notifications or something lol</marquee>
+        </div>
+        <div class="fast-scrolling-text">
+            <marquee behavior="scroll" direction="left" scrollamount="100">NYOOOOOOOOOOOOOOOOOOOM</marquee>
+            </div>
 
 
         <h2>welcome to my (bad) website!</h2>
@@ -47,6 +114,17 @@
           <audio id="audio" src="https://cdn.discordapp.com/attachments/711745107446988851/822642703064891402/purr.mp3" ></audio>
 
         <h2>PIXELATED CAT IMAGE POGGERS</h2>
+
+        <div class='funky-music'
+             <h4><b>play this music for epicness</b></h4>
+            </div>
+            &nbsp;
+        <div class='audio-container'>
+            <audio controls autoplay>
+                <source src="https://cdn.discordapp.com/attachments/735354860962185239/822664840236892181/Nintendo_3DS_Music_-_Friend_List.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+              </audio>
+         </div>
 
     </body>    
 </html>
