more assets stuff

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ P to the U double F S YES! -->
                 font-family: 'Quicksand';
             }
         </style>
-        <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/735354860962185239/822702118585892874/favicon.png"
+        <link rel="shortcut icon" type="image/png" href="https://thediamondk.github.io/assets/images/favicon.png"
     </head>
     <body>
         <div="pain">
@@ -110,8 +110,8 @@ P to the U double F S YES! -->
                            }
              </script>
           
-          <img src="https://cdn.discordapp.com/emojis/810185394947227658.png?v=1" value="PLAY"  onclick="play()" height="500" width="500">
-          <audio id="audio" src="https://cdn.discordapp.com/attachments/711745107446988851/822642703064891402/purr.mp3" ></audio>
+          <img src="https://thediamondk.github.io/assets/images/duchess.png" value="PLAY"  onclick="play()" height="500" width="500">
+          <audio id="audio" src="https://thediamondk.github.io/assets/music/purr.mp3" ></audio>
 
         <h2>PIXELATED CAT IMAGE POGGERS</h2>
 
@@ -121,7 +121,7 @@ P to the U double F S YES! -->
             &nbsp;
         <div class='audio-container'>
             <audio controls autoplay>
-                <source src="https://cdn.discordapp.com/attachments/735354860962185239/822664840236892181/Nintendo_3DS_Music_-_Friend_List.mp3" type="audio/mpeg">
+                <source src="https://thediamondk.github.io/assets/music/epic-music.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
               </audio>
          </div>
