cursor location change

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ P to the U double F S YES! -->
             margin-left: auto;
             margin-right: auto;
             }
-        * { cursor: url(https://cdn.discordapp.com/attachments/735354860962185239/822662950702809098/Wii_Cursor.cur), default;}
+        * { cursor: url(https://thediamondk.github.io/assets/images//Wii_Cursor.cur), default;}
             .audio-container {
                 display: flex;
                  justify-content: center;
