added some things

--- a/index.html
+++ b/index.html
@@ -52,10 +52,6 @@ P to the U double F S YES! -->
                 text-align: center;
                 font-family: Quicksand;
             }
-                 .scrolling-text {
-                text-align: center;
-                font-family: 'Quicksand';
-            }
             body {
             padding: 25px;
             background-color: white;
@@ -75,10 +71,29 @@ P to the U double F S YES! -->
             .pain {
                 font-family: 'Quicksand';
             }
+            .alertbar { 
+        background-color: #ff0000; 
+        color: #FFFFFF; 
+        display: block; 
+        line-height: 45px;
+        height: 50px; 
+        position: relative; 
+        text-align: center; 
+        text-decoration: none; 
+        top: 0px; 
+        width: 100%;
+        z-index: 100;
+        font-family: sans-serif;
+        }
         </style>
         <link rel="shortcut icon" type="image/png" href="https://thediamondk.github.io/assets/images/favicon.png"
     </head>
     <body>
+
+        <div class="alertbar">
+            <marquee behavior="scroll" direction="left">gaming god</marquee>
+        </div>
+
         <div="pain">
             <h5><b>WHY IS IT SO HARD TO CENTER A FRIGGIN BUTTON</b></h5>
         </div>
@@ -92,10 +107,6 @@ P to the U double F S YES! -->
     element.classList.toggle("dark-mode");
     }     
     </script>
-        
-        <div class="scrolling-text">
-        <marquee behavior="scroll" direction="left">i could probably use this for like notifications or something lol</marquee>
-        </div>
         <div class="fast-scrolling-text">
             <marquee behavior="scroll" direction="left" scrollamount="100">NYOOOOOOOOOOOOOOOOOOOM</marquee>
             </div>
@@ -125,6 +136,8 @@ P to the U double F S YES! -->
                 Your browser does not support the audio element.
               </audio>
          </div>
+
+         
 
     </body>    
 </html>
