--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@ P to the U double F S YES! -->
         z-index: 100;
         font-family: sans-serif;
         }
+        .gmod  {
+            display: block;
+            float: left;
+            }
         </style>
         <link rel="shortcut icon" type="image/png" href="https://thediamondk.github.io/assets/images/favicon.png"
     </head>
@@ -136,8 +140,15 @@ P to the U double F S YES! -->
                 Your browser does not support the audio element.
               </audio>
          </div>
+         &nbsp;
+         &nbsp;
+         &nbsp;
 
-         
+         <div class="gmod">
+         <a href="https://thediamondk.github.io/gmod">
+            <img alt="secrets secrets" src="https://thediamondk.github.io/assets/images/gmod.jpg" style="width:50px;height:50px;">
+        </a>
+        </div>
 
     </body>    
 </html>
