I CENTERED IT LETS GO

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ P to the U double F S YES! -->
             }
             .pain {
                 font-family: 'Quicksand';
+                text-align: center;
             }
             .alertbar { 
         background-color: #ff0000; 
@@ -99,11 +100,11 @@ P to the U double F S YES! -->
         </div>
 
         <div="pain">
-            <h5><b>WHY IS IT SO HARD TO CENTER A FRIGGIN BUTTON</b></h5>
+            <center><h5><b>LETS GO I CENTERED IT</b></h5></center>
         </div>
 
         <div='dark-mode-button'>
-        <button onclick="myFunction()">Toggle dark mode</button>
+        <center><button onclick="myFunction()">Toggle dark mode</button>
     </div>
 
         <script>function myFunction() {
