fixed a spelling error

--- a/gmod.html
+++ b/gmod.html
@@ -12,6 +12,11 @@
     }
 </style>
 
+<audio autoplay>
+    <source src="https://thediamondk.github.io/assets/music/undo.mp3" type="audio/mp3">
+    Your browser does not support the audio element.
+</audio>
+
 <video width="460" height="460" controls class="center">
     <source src="https://thediamondk.github.io/assets/videos/gmod.mp4" type="video/mp4">
     Your browser does not support the video tag.
