--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ P to the U double F S YES! -->
   gtag('config', 'G-DGG831PPRZ');
 </script>
         <meta charset="utf=8">
-        <meta name="viewport" content="widthy=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>website!!1!</title>
         <style>
            @import url('https://fonts.googleapis.com/css?family=Quicksand');
