changed the mp3 into a wav

--- a/gmod.html
+++ b/gmod.html
@@ -13,7 +13,7 @@
 </style>
 
 <audio autoplay>
-    <source src="https://thediamondk.github.io/assets/music/undo.mp3" type="audio/mp3">
+    <source src="https://thediamondk.github.io/assets/music/undo.wav" type="audio/wav">
     Your browser does not support the audio element.
 </audio>
 
