fixed some stuff and added a favicon

--- a/gmod.html
+++ b/gmod.html
@@ -12,6 +12,8 @@
     }
 </style>
 
+<link rel="shortcut icon" type="image/jpg" href="https://thediamondk.github.io/assets/images/gmod.jpg">
+
 <audio autoplay>
     <source src="https://thediamondk.github.io/assets/music/undo.wav" type="audio/wav">
     Your browser does not support the audio element.
