--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ P to the U double F S YES! -->
             float: left;
             }
         </style>
-        <link rel="shortcut icon" type="image/png" href="https://thediamondk.github.io/assets/images/favicon.png"
+        <link rel="shortcut icon" type="image/png" href="https://thediamondk.github.io/assets/images/favicon.png">
     </head>
     <body>
 
