--- a/404.html
+++ b/404.html
@@ -2,5 +2,17 @@
 
 <html>
 <meta charset="utf=8">
-<meta name="viewport" content="widthy=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>404 - TITLE NOT FOUND</title>
+<style>
+    .goofed {
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        width: 100%;
+    }
+</style>
+
+<div class="goofed">
+    <img src=https://thediamondk.github.io/assets/images/goof.png>
+</div>
