--- a/gmod.html
+++ b/gmod.html
@@ -2,7 +2,7 @@
 
 <html>
 <meta charset="utf=8">
-<meta name="viewport" content="widthy=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>dog in gmod</title>
 <style>
     video{
