404 - commit not found

--- a/404.html
+++ b/404.html
@@ -5,14 +5,39 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>404 - TITLE NOT FOUND</title>
 <style>
+    @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
     .goofed {
         margin-left: auto;
         margin-right: auto;
         display: block;
-        width: 100%;
+        width: 38%;
+    }
+    .congrats {
+    text-align: center;
+    font-family: 'Source Code Pro';        
+    }
+    .found {
+    text-align: center;
+    font-family: 'Source Code Pro';        
+    }
+    .home {
+    text-align: center;
+    font-family: 'Source Code Pro';        
     }
 </style>
 
 <div class="goofed">
-    <img src=https://thediamondk.github.io/assets/images/goof.png>
+    <img src=https://thediamondk.github.io/assets/images/goof.png width="500" height="233">
+</div>
+
+<div class="congrats">
+    <h1>Congrats!</h1>
+</div>
+
+<div class="found">
+    <h2> You found the 404 page!</h2>
+</div>
+
+<div class="home">
+    <a href="https://thediamondk.github.io/"><h3>i wanna go home :(</h3></a>
 </div>
