--- a/dogs-and-stuff.html
+++ b/dogs-and-stuff.html
@@ -1,16 +1,56 @@
 <!DOCTYPE html>
 <html>
+<title>Dogs and stuff</title>
+<link rel="shortcut icon" type="image/png" href="https://thediamondk.github.io/assets/images/dog3.png">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-* {box-sizing: border-box}
-body {font-family: Verdana, sans-serif; margin:0}
-.mySlides {display: none}
-img {vertical-align: middle;}
+
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
+
+body {
+  margin: 0;
+  font-family: Quicksand;
+}
+
+/* navbar */
+
+.topnav, .topnav a{
+  padding: 1%;
+}
+
+body {
+  margin: 0;
+  font-family: Quicksand;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: rgb(0, 57, 59);
+}
+
+.topnav a {
+  float: left;
+  color: #00fff2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: rgb(0, 71, 73);
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #00fff2;
+  color: rgb(0, 71, 73);
+}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 500px;
   position: relative;
   margin: auto;
 }
@@ -44,8 +84,8 @@ img {vertical-align: middle;}
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
+  color: black;
+  font-size: 30px;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
@@ -55,8 +95,8 @@ img {vertical-align: middle;}
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
+  color: #000000;
+  font-size: 20px;
   padding: 8px 12px;
   position: absolute;
   top: 0;
@@ -104,25 +144,44 @@ img {vertical-align: middle;}
 </head>
 <body>
 
+  <body style="background-color: rgb(0, 71, 73);">
+
+<div class="topnav">
+        <a href="https://thediamondk.github.io/">Home</a>
+        <a  class="active" href="https://thediamondk.github.io/dogs-and-stuff">Dogs and stuff</a>
+</div>
+
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="img_nature_wide.jpg" style="width:100%">
-  <div class="text">Caption Text</div>
+  <div class="numbertext">1 / 5</div>
+  <img src="https://thediamondk.github.io/assets/images/dog1.png" style="width:100%">
+  <div class="text">hap dog</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="img_snow_wide.jpg" style="width:100%">
-  <div class="text">Caption Two</div>
+  <div class="numbertext">2 / 5</div>
+  <img src="https://thediamondk.github.io/assets/images/dog2.png" style="width:100%">
+  <div class="text">unamused >:(((</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="img_mountains_wide.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
+  <div class="numbertext">3 / 5</div>
+  <img src="https://thediamondk.github.io/assets/images/dog3.png" style="width:100%">
+  <div class="text">wtf</div>
 </div>
+
+<div class="mySlides fade">
+    <div class="numbertext">4 / 5</div>
+    <img src="https://thediamondk.github.io/assets/images/dog4.png" style="width:100%">
+    <div class="text">sad :<</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">5 / 5</div>
+    <img src="https://thediamondk.github.io/assets/images/dog5.png" style="width:100%">
+    <div class="text">woofle</div>
+  </div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -134,6 +193,8 @@ img {vertical-align: middle;}
   <span class="dot" onclick="currentSlide(1)"></span> 
   <span class="dot" onclick="currentSlide(2)"></span> 
   <span class="dot" onclick="currentSlide(3)"></span> 
+  <span class="dot" onclick="currentSlide(4)"></span> 
+  <span class="dot" onclick="currentSlide(5)"></span> 
 </div>
 
 <script>
