--- a/gmod.html
+++ b/gmod.html
@@ -10,7 +10,46 @@
         margin-right: auto;
         display: block;
     }
+    .topnav, .topnav a{
+  padding: 1%;
+}
+
+body {
+  margin: 0;
+  font-family: Quicksand;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: rgb(0, 57, 59);
+}
+
+.topnav a {
+  float: left;
+  color: #00fff2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: rgb(0, 71, 73);
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #00fff2;
+  color: rgb(0, 71, 73);
+}
+
 </style>
+
+<div class="topnav">
+    <a href="https://thediamondk.github.io/">Home</a>
+    <a href="https://thediamondk.github.io/dogs-and-stuff">Dogs and stuff</a>
+</div>
+
 
 <link rel="shortcut icon" type="image/jpg" href="https://thediamondk.github.io/assets/images/gmod.jpg">
 
@@ -23,5 +62,7 @@
     <source src="https://thediamondk.github.io/assets/videos/gmod.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
+
+  <body style="background-color: rgb(0, 71, 73);"></body>
 
 </html>
