forgot the fav icon lol

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ P to the U double F S YES! -->
 
 <html>
     <title>Home</title>
+    <link rel="shortcut icon" type="image/png" href="https://thediamondk.github.io/assets/images/favicon.png">
     <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
