--- a/dogs-and-stuff.html
+++ b/dogs-and-stuff.html
@@ -144,6 +144,11 @@ body {
 </head>
 <body>
 
+  <audio autoplay>
+    <source src="https://thediamondk.github.io/assets/music/dog.ogg" type="audio/ogg">
+    Your browser does not support the audio element.
+</audio>
+
   <body style="background-color: rgb(0, 71, 73);">
 
 <div class="topnav">
