--- a/dogs-and-stuff.html
+++ b/dogs-and-stuff.html
@@ -151,10 +151,15 @@ body {
 
   <body style="background-color: rgb(0, 71, 73);">
 
-<div class="topnav">
-        <a href="https://thediamondk.github.io/">Home</a>
-        <a  class="active" href="https://thediamondk.github.io/dogs-and-stuff">Dogs and stuff</a>
-</div>
+    <body>
+      <div class="topnav">
+          <a class="active" href="https://thediamondk.github.io/">Home</a>
+          <a href="https://thediamondk.github.io/dogs-and-stuff">Dogs and stuff</a>
+          <a href="https://www.youtube.com/thediamondk">Youtube</a>
+
+          <body style="background-color: rgb(0, 71, 73);">
+          
+  </div>
 
 <div class="slideshow-container">
 
