--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ body {
         <div class="topnav">
             <a class="active" href="https://thediamondk.github.io/">Home</a>
             <a href="https://thediamondk.github.io/dogs-and-stuff">Dogs and stuff</a>
+            <a href="https://www.youtube.com/thediamondk">Youtube</a>
 
             <body style="background-color: rgb(0, 71, 73);">
             
