fixed the wrong thing being active in the nav bar on the dog website

--- a/dogs-and-stuff.html
+++ b/dogs-and-stuff.html
@@ -153,8 +153,8 @@ body {
 
     <body>
       <div class="topnav">
-          <a class="active" href="https://thediamondk.github.io/">Home</a>
-          <a href="https://thediamondk.github.io/dogs-and-stuff">Dogs and stuff</a>
+          <a href="https://thediamondk.github.io/">Home</a>
+          <a class="active" href="https://thediamondk.github.io/dogs-and-stuff">Dogs and stuff</a>
           <a href="https://www.youtube.com/thediamondk">Youtube</a>
 
           <body style="background-color: rgb(0, 71, 73);">
@@ -178,7 +178,7 @@ body {
 <div class="mySlides fade">
   <div class="numbertext">3 / 5</div>
   <img src="https://thediamondk.github.io/assets/images/dog3.png" style="width:100%">
-  <div class="text">wtf</div>
+  <div class="text">what</div>
 </div>
 
 <div class="mySlides fade">
