fixed bold font on gmod page

--- a/gmod.html
+++ b/gmod.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>dog in gmod</title>
 <style>
+
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
+  
     video{
         margin-left: auto;
         margin-right: auto;
@@ -47,7 +50,7 @@ body {
 
 <body>
   <div class="topnav">
-      <a class="active" href="https://thediamondk.github.io/">Home</a>
+      <a href="https://thediamondk.github.io/">Home</a>
       <a href="https://thediamondk.github.io/dogs-and-stuff">Dogs and stuff</a>
       <a href="https://www.youtube.com/thediamondk">Youtube</a>
 
