--- a/gmod.html
+++ b/gmod.html
@@ -4,6 +4,7 @@
 <meta charset="utf=8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>dog in gmod</title>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
 <style>
 
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
