--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ body {
 </style>
     </head>
     <body>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
         <div class="topnav">
             <a class="active" href="https://thediamondk.github.io/">Home</a>
             <a href="https://thediamondk.github.io/dogs-and-stuff">Dogs and stuff</a>
