fixed anylitics maybe

--- a/404.html
+++ b/404.html
@@ -27,6 +27,16 @@
     }
 </style>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DGG831PPRZ');
+</script>
+
 <div class="goofed">
     <img src=https://thediamondk.github.io/assets/images/goof.png width="500" height="233">
 </div>
