--- a/dogs-and-stuff.html
+++ b/dogs-and-stuff.html
@@ -145,6 +145,16 @@ body {
 </head>
 <body>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DGG831PPRZ');
+</script>
+
   <audio autoplay>
     <source src="https://thediamondk.github.io/assets/music/dog.ogg" type="audio/ogg">
     Your browser does not support the audio element.
