--- a/gmod.html
+++ b/gmod.html
@@ -4,7 +4,7 @@
 <meta charset="utf=8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>dog in gmod</title>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
+
 <style>
 
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
@@ -50,6 +50,15 @@ body {
 </style>
 
 <body>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DGG831PPRZ');
+</script>
   <div class="topnav">
       <a href="https://thediamondk.github.io/">Home</a>
       <a href="https://thediamondk.github.io/dogs-and-stuff">Dogs and stuff</a>
