--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ P to the U double F S YES! -->
     <link rel="shortcut icon" type="image/png" href="https://thediamondk.github.io/assets/images/favicon.png">
     <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
 
 <style>
 
@@ -74,6 +73,15 @@ body {
 </style>
     </head>
     <body>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DGG831PPRZ');
+</script>
       <meta name="viewport" content="width=device-width, initial-scale=1">
         <div class="topnav">
             <a class="active" href="https://thediamondk.github.io/">Home</a>
