--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ P to the U double F S YES! -->
     <title>Home</title>
     <link rel="shortcut icon" type="image/png" href="https://thediamondk.github.io/assets/images/favicon.png">
     <head>
+      <meta property="og:title" content="the most amazing website clikc me if ur cool B)" />
 <!-- Global site tag (gtag.js) - Google Analytics -->
 
 <style>
