--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ R double E S E S YES!
 ...
 P to the U double F S YES! -->
 
-<html>
+<html prefix="og: https://ogp.me/ns#">
     <title>Home</title>
     <link rel="shortcut icon" type="image/png" href="https://thediamondk.github.io/assets/images/favicon.png">
     <head>
