--- a/404.html
+++ b/404.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 
-<html>
+<html prefix="og: https://ogp.me/ns#">
 <meta charset="utf=8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>404 - TITLE NOT FOUND</title>
+<meta property="og:title" content="404 :trol:" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
 <style>
     @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
@@ -38,7 +39,7 @@
 </script>
 
 <div class="goofed">
-    <img src=https://thediamondk.github.io/assets/images/goof.png width="500" height="233">
+    <img src=assets/images/goof.png width="500" height="233">
 </div>
 
 <div class="congrats">
