--- a/dogs-and-stuff.html
+++ b/dogs-and-stuff.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html prefix="og: https://ogp.me/ns#">
 <title>Dogs and stuff</title>
-<link rel="shortcut icon" type="image/png" href="https://thediamondk.github.io/assets/images/dog3.png">
+<meta property="og:title" content="dohg" />
+<meta property="og:image" content="assets/images/dog.jpg" />
+<link rel="shortcut icon" type="image/png" href="assets/images/dog3.png">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
@@ -156,7 +158,7 @@ body {
 </script>
 
   <audio autoplay>
-    <source src="https://thediamondk.github.io/assets/music/dog.ogg" type="audio/ogg">
+    <source src="assets/music/dog.ogg" type="audio/ogg">
     Your browser does not support the audio element.
 </audio>
 
@@ -165,7 +167,7 @@ body {
     <body>
       <div class="topnav">
           <a href="https://thediamondk.github.io/">Home</a>
-          <a class="active" href="https://thediamondk.github.io/dogs-and-stuff">Dogs and stuff</a>
+          <a class="active" href="dogs-and-stuff.html">Dogs and stuff</a>
           <a href="https://www.youtube.com/thediamondk">Youtube</a>
 
           <body style="background-color: rgb(0, 71, 73);">
@@ -176,31 +178,31 @@ body {
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 5</div>
-  <img src="https://thediamondk.github.io/assets/images/dog1.png" style="width:100%">
+  <img src="assets/images/dog1.png" style="width:100%">
   <div class="text">hap dog</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 5</div>
-  <img src="https://thediamondk.github.io/assets/images/dog2.png" style="width:100%">
+  <img src="assets/images/dog2.png" style="width:100%">
   <div class="text">unamused >:(((</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 5</div>
-  <img src="https://thediamondk.github.io/assets/images/dog3.png" style="width:100%">
+  <img src="assets/images/dog3.png" style="width:100%">
   <div class="text">what</div>
 </div>
 
 <div class="mySlides fade">
     <div class="numbertext">4 / 5</div>
-    <img src="https://thediamondk.github.io/assets/images/dog4.png" style="width:100%">
+    <img src="assets/images/dog4.png" style="width:100%">
     <div class="text">sad :<</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">5 / 5</div>
-    <img src="https://thediamondk.github.io/assets/images/dog5.png" style="width:100%">
+    <img src="assets/images/dog5.png" style="width:100%">
     <div class="text">woofle</div>
   </div>
 
