--- a/gmod.html
+++ b/gmod.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 
-<html>
+<html prefix="og: https://ogp.me/ns#">
 <meta charset="utf=8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>dog in gmod</title>
-
+<meta property="og:title" content="geee mod" />
+<meta property="og:image" content="assets/images/gmod.jpg" />
 <style>
 
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
@@ -61,7 +62,7 @@ body {
 </script>
   <div class="topnav">
       <a href="https://thediamondk.github.io/">Home</a>
-      <a href="https://thediamondk.github.io/dogs-and-stuff">Dogs and stuff</a>
+      <a href="dogs-and-stuff.html">Dogs and stuff</a>
       <a href="https://www.youtube.com/thediamondk">Youtube</a>
 
       <body style="background-color: rgb(0, 71, 73);">
@@ -69,15 +70,15 @@ body {
 </div>
 
 
-<link rel="shortcut icon" type="image/jpg" href="https://thediamondk.github.io/assets/images/gmod.jpg">
+<link rel="shortcut icon" type="image/jpg" href="assets/images/gmod.jpg">
 
 <audio autoplay>
-    <source src="https://thediamondk.github.io/assets/music/undo.wav" type="audio/wav">
+    <source src="assets/music/undo.wav" type="audio/wav">
     Your browser does not support the audio element.
 </audio>
 
 <video width="460" height="460" controls class="center">
-    <source src="https://thediamondk.github.io/assets/videos/gmod.mp4" type="video/mp4">
+    <source src="assets/videos/gmod.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
