--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ R double E S E S YES!
 ...
 P to the U double F S YES! -->
 
-<html prefix="og: https://ogp.me/ns#">
+<html >
     <title>Home</title>
-    <link rel="shortcut icon" type="image/png" href="https://thediamondk.github.io/assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
     <head>
       <meta property="og:title" content="the most amazing website clikc me if ur cool B)" />
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -86,7 +86,7 @@ body {
       <meta name="viewport" content="width=device-width, initial-scale=1">
         <div class="topnav">
             <a class="active" href="https://thediamondk.github.io/">Home</a>
-            <a href="https://thediamondk.github.io/dogs-and-stuff">Dogs and stuff</a>
+            <a href="dogs-and-stuff.html">Dogs and stuff</a>
             <a href="https://www.youtube.com/thediamondk">Youtube</a>
 
             <body style="background-color: rgb(0, 71, 73);">
@@ -117,7 +117,7 @@ body {
     <br>
     <br>
 
-    <a href="https://thediamondk.github.io/gmod.html"> <img src="https://thediamondk.github.io/assets/images/gmod.jpg" style="width:50px;height:50px;"></a>
+    <a href="gmod.html"> <img src="assets/images/gmod.jpg" style="width:50px;height:50px;"></a>
 
     </body>
 </html>
