--- a/dogs-and-stuff.html
+++ b/dogs-and-stuff.html
@@ -3,7 +3,7 @@
 <title>Dogs and stuff</title>
 <meta property="og:title" content="dohg" />
 <meta property="og:image" content="assets/images/dog.jpg" />
-<link rel="shortcut icon" type="image/png" href="assets/images/dog3.png">
+<link rel="shortcut icon" type="image/png" href="https://thediamondk.github.io/assets/images/dog3.png">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
