--- a/gmod.html
+++ b/gmod.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>dog in gmod</title>
 <meta property="og:title" content="geee mod" />
-<meta property="og:image" content="assets/images/gmod.jpg" />
+<meta property="og:image" content="https://thediamondk.github.io/assets/images/gmod.jpg" />
 <style>
 
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
