fixed dead images

--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
 </script>
 
 <div class="goofed">
-    <img src=assets/images/goof.png width="500" height="233">
+    <img src=https://thediamondk.github.io/assets/images/goof.png width="500" height="233">
 </div>
 
 <div class="congrats">
