--- a/gmod.html
+++ b/gmod.html
@@ -70,7 +70,7 @@ body {
 </div>
 
 
-<link rel="shortcut icon" type="image/jpg" href="assets/images/gmod.jpg">
+<link rel="shortcut icon" type="image/jpg" href="https://thediamondk.github.io/assets/images/gmod.jpg">
 
 <audio autoplay>
     <source src="assets/music/undo.wav" type="audio/wav">
