--- a/gmod.html
+++ b/gmod.html
@@ -6,6 +6,8 @@
 <title>dog in gmod</title>
 <meta property="og:title" content="geee mod" />
 <meta property="og:image" content="https://thediamondk.github.io/assets/images/gmod.jpg" />
+<head>
+  <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
 <style>
 
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
@@ -49,7 +51,7 @@ body {
 }
 
 </style>
-
+</head>
 <body>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
@@ -60,13 +62,13 @@ body {
 
   gtag('config', 'G-DGG831PPRZ');
 </script>
-  <div class="topnav">
-      <a href="https://thediamondk.github.io/">Home</a>
-      <a href="dogs-and-stuff.html">Dogs and stuff</a>
-      <a href="https://www.youtube.com/thediamondk">Youtube</a>
+<div class="topnav">
+  <a href="https://thediamondk.github.io/"><i class="fas fa-home"></i> Home</a>
+  <a href="dogs-and-stuff.html"><i class="fas fa-dog"></i> Dogs and stuff</a>
+  <a href="https://www.youtube.com/thediamondk"><i class="fab fa-youtube"></i> Youtube</a>
 
-      <body style="background-color: rgb(0, 71, 73);">
-      
+  <body style="background-color: rgb(0, 71, 73);">
+  
 </div>
 
 
