--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@ R double E S E S YES!
 ...
 P to the U double F S YES! -->
 
-<html >
+<html>
     <title>Home</title>
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
     <head>
+      <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
       <meta property="og:title" content="the most amazing website clikc me if ur cool B)" />
 <!-- Global site tag (gtag.js) - Google Analytics -->
 
@@ -85,9 +86,9 @@ body {
 </script>
       <meta name="viewport" content="width=device-width, initial-scale=1">
         <div class="topnav">
-            <a class="active" href="https://thediamondk.github.io/">Home</a>
-            <a href="dogs-and-stuff.html">Dogs and stuff</a>
-            <a href="https://www.youtube.com/thediamondk">Youtube</a>
+            <a class="active" href="https://thediamondk.github.io/"><i class="fas fa-home"></i> Home</a>
+            <a href="dogs-and-stuff.html"><i class="fas fa-dog"></i> Dogs and stuff</a>
+            <a href="https://www.youtube.com/thediamondk"><i class="fab fa-youtube"></i> Youtube</a>
 
             <body style="background-color: rgb(0, 71, 73);">
             
