--- a/404.html
+++ b/404.html
@@ -51,5 +51,5 @@
 </div>
 
 <div class="home">
-    <a href="https://thediamondk.github.io/"><h3>i wanna go home :(</h3></a>
+    <a href="index.html"><h3>i wanna go home :(</h3></a>
 </div>
