--- a/Week7Beta.html
+++ b/Week7Beta.html
@@ -3,23 +3,28 @@
 <html prefix="og: https://ogp.me/ns#">
 <meta charset="utf=8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>dog in gmod</title>
-<meta property="og:title" content="geee mod" />
-<meta property="og:image" content="https://thediamondk.github.io/assets/images/gmod.jpg" />
+<title>FNF Week 7</title>
+<meta property="og:title" content="FNF Week 7" />
 <head>
-  <link rel="shortcut icon" type="image/jpg" href="https://thediamondk.github.io/assets/images/gmod.jpg">
+  <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
   <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
 <style>
 
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
   
-    video{
-        margin-left: auto;
-        margin-right: auto;
-        display: block;
-    }
-    .topnav, .topnav a{
-  padding: 1%;
+.iframe-container {
+		text-align:center;
+  		width:100%;
+  }
+
+  p, h1, h2, h3, h4, h5, h6, div{
+  font: Quicksand;
+  color: #00fff2;
+  text-align: center;
+}
+
+form {
+    margin-bottom: 1%;
 }
 
 body {
@@ -74,19 +79,18 @@ body {
   
 </div>
 
+<div class="iframe-container">
+<iframe src="https://uploads.ungrounded.net/alternate/1528000/1528775_alternate_113347_r87.zip/?NewgroundsAPI_PublisherID=1&amp;NewgroundsAPI_SandboxID=607cade7afa42&amp;NewgroundsAPI_SessionID=&amp;NewgroundsAPI_Username=%26It%3Bdeleted%26gt%3B&amp;NewgroundsAPI_UserID=0&amp;ng_username=%26It%3Bdeleted%36gt" height="540" width="1000" style="border:none;"></iframe>
+</div>
+
+<h1>By the way...</h1>
+<h2>Week 7 story mode does <span style="color: red;">not</span> work</h2>
 
 
+<br>
 
-<audio autoplay>
-    <source src="assets/audio/undo.wav" type="audio/wav">
-    Your browser does not support the audio element.
-</audio>
-
-<video width="460" height="460" controls class="center">
-    <source src="assets/videos/gmod.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-
-  <body style="background-color: rgb(0, 71, 73);"></body>
+<center><form action="https://uploads.ungrounded.net/alternate/1528000/1528775_alternate_113347_r87.zip/?NewgroundsAPI_PublisherID=1&amp;NewgroundsAPI_SandboxID=607cade7afa42&amp;NewgroundsAPI_SessionID=&amp;NewgroundsAPI_Username=%26It%3Bdeleted%26gt%3B&amp;NewgroundsAPI_UserID=0&amp;ng_username=%26It%3Bdeleted%36gt">
+    <input type="submit" value="Fullscreen" />
+</form></center>
 
 </html>
