--- a/games.html
+++ b/games.html
@@ -3,23 +3,40 @@
 <html prefix="og: https://ogp.me/ns#">
 <meta charset="utf=8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>dog in gmod</title>
-<meta property="og:title" content="geee mod" />
-<meta property="og:image" content="https://thediamondk.github.io/assets/images/gmod.jpg" />
+<title>Games</title>
+<meta property="og:title" content="Games" />
+<link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
 <head>
-  <link rel="shortcut icon" type="image/jpg" href="https://thediamondk.github.io/assets/images/gmod.jpg">
   <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
 <style>
 
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
+
+a:visited {
+  text-decoration: none;
+}
+
+a:link {
+  text-decoration: none;
+}
   
-    video{
-        margin-left: auto;
-        margin-right: auto;
-        display: block;
-    }
-    .topnav, .topnav a{
-  padding: 1%;
+.iframe-container {
+		text-align:center;
+  		width:100%;
+  }
+
+  p, h1, h2, h3, h4, h5, h6, div{
+  font: Quicksand;
+  color: #00fff2;
+  text-align: center;
+}
+
+ div {
+    padding: 1%;
+ }
+
+form {
+    margin-bottom: 1%;
 }
 
 body {
@@ -68,25 +85,19 @@ body {
   <a href="dogs-and-stuff.html"><i class="fas fa-dog"></i> Dogs and stuff</a>
   <a href="https://www.youtube.com/thediamondk"><i class="fab fa-youtube"></i> Youtube</a>
   <a href="https://discord.gg/BAAy4Yh"><i class="fab fa-discord"></i> Discord</a>
-  <a href="games.html"><i class="fas fa-gamepad-alt"></i> Games</a>
+  <a href="games.html" class="active"><i class="fas fa-gamepad-alt"></i> Games</a>
 
   <body style="background-color: rgb(0, 71, 73);">
   
 </div>
 
+<h1 style="font-size: 50px;">Games</h1>
+<a href="Week7Beta.html"><h3>FNF Week 7</h3></a>
+<a href="Whitty.html"><h3>FNF Whitty</h3></a>
+<a href="FactoryBalls.html"><h3>FactoryBalls</h3></a>
 
-
-
-<audio autoplay>
-    <source src="assets/audio/undo.wav" type="audio/wav">
-    Your browser does not support the audio element.
-</audio>
-
-<video width="460" height="460" controls class="center">
-    <source src="assets/videos/gmod.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-
-  <body style="background-color: rgb(0, 71, 73);"></body>
+<div class=iframe-container>
+<iframe scrolling="no" src="https://docs.google.com/forms/d/e/1FAIpQLSe-A7_Z-6JgvJac2dq5rspBFgMC6NnO1flmCeyfedvg0XN5cw/viewform?embedded=true" width="500" height="350" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+</div>
 
 </html>
