--- a/dogs-and-stuff.html
+++ b/dogs-and-stuff.html
@@ -96,6 +96,7 @@ body {
   bottom: 8px;
   width: 100%;
   text-align: center;
+  margin-left: -3%;
 }
 
 /* Number text (1/3 etc) */
@@ -160,7 +161,7 @@ body {
 </script>
 
   <audio autoplay>
-    <source src="assets/music/dog.ogg" type="audio/ogg">
+    <source src="assets/audio/dog.ogg" type="audio/ogg">
     Your browser does not support the audio element.
 </audio>
 
@@ -168,9 +169,11 @@ body {
 
     <body>
       <div class="topnav">
-        <a href="https://thediamondk.github.io/"><i class="fas fa-home"></i> Home</a>
-        <a class=active href="dogs-and-stuff.html"><i class="fas fa-dog"></i> Dogs and stuff</a>
+        <a href="index.html"><i class="fas fa-home"></i> Home</a>
+        <a href="dogs-and-stuff.html" class="active"><i class="fas fa-dog"></i> Dogs and stuff</a>
         <a href="https://www.youtube.com/thediamondk"><i class="fab fa-youtube"></i> Youtube</a>
+        <a href="https://discord.gg/BAAy4Yh"><i class="fab fa-discord"></i> Discord</a>
+        <a href="games.html"><i class="fas fa-gamepad-alt"></i> Games</a>
       
         <body style="background-color: rgb(0, 71, 73);">
         
