--- a/index.html
+++ b/index.html
@@ -86,10 +86,11 @@ body {
 </script>
       <meta name="viewport" content="width=device-width, initial-scale=1">
         <div class="topnav">
-            <a class="active" href="https://thediamondk.github.io/"><i class="fas fa-home"></i> Home</a>
-            <a href="dogs-and-stuff.html"><i class="fas fa-dog"></i> Dogs and stuff</a>
-            <a href="https://www.youtube.com/thediamondk"><i class="fab fa-youtube"></i> Youtube</a>
-
+          <a href="index.html#top" class="active"><i class="fas fa-home"></i> Home</a>
+          <a href="dogs-and-stuff.html"><i class="fas fa-dog"></i> Dogs and stuff</a>
+          <a href="https://www.youtube.com/thediamondk"><i class="fab fa-youtube"></i> Youtube</a>
+          <a href="https://discord.gg/BAAy4Yh"><i class="fab fa-discord"></i> Discord</a>
+          <a href="games.html"><i class="fas fa-gamepad-alt"></i> Games</a>
             <body style="background-color: rgb(0, 71, 73);">
             
     </div>
