--- a/games.html
+++ b/games.html
@@ -96,6 +96,8 @@ body {
 <a href="Whitty.html"><h3>FNF Whitty</h3></a>
 <a href="FactoryBalls.html"><h3>FactoryBalls</h3></a>
 
+<h5>if the games are running bad, try turning on <a href="https://www.howtogeek.com/412738/how-to-turn-hardware-acceleration-on-and-off-in-chrome/" target="_blank""><span style="color: #00fff2;"><u>hardware acceleration</u></span></a></h5>
+
 <div class=iframe-container>
 <iframe scrolling="no" src="https://docs.google.com/forms/d/e/1FAIpQLSe-A7_Z-6JgvJac2dq5rspBFgMC6NnO1flmCeyfedvg0XN5cw/viewform?embedded=true" width="500" height="350" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
