--- a/Whitty.html
+++ b/Whitty.html
@@ -11,6 +11,22 @@
 <style>
 
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
+
+.fullScreen {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.normal {
+  text-align:center;
+  		width:100%;
+      width: 1000px;
+      height: 540px;
+}
+
   
 .iframe-container {
 		text-align:center;
@@ -23,7 +39,7 @@
   text-align: center;
 }
 
-form {
+button {
     margin-bottom: 1%;
 }
 
@@ -112,8 +128,20 @@ body {
 
 <br>
 
-<center><form action="">
-    <input type="submit" value="Fullscreen" />
-</form></center>
+<center><button onclick="Fullscreen()">Fullscreen</button></center>
+
+<script>function Fullscreen() {
+  document.getElementsByTagName("iframe")[0].className = "fullScreen";
+}
+</script>
+
+<script>
+  document.addEventListener("keydown", event => {
+    switch (event.key) {
+        case "Escape":
+        document.getElementsByTagName("iframe")[0].className = "normal";
+            }
+        })
+  </script>
 
 </html>
