--- a/Week7Beta.html
+++ b/Week7Beta.html
@@ -11,12 +11,16 @@
 <style>
 
 
+
+
+
+
 .fullScreen {
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 5%;
+    left: 5%;
 }
 
 .normal {
@@ -44,8 +48,14 @@ button {
 }
 
 body {
+  color: #00fff2;
   margin: 0;
   font-family: Quicksand;
+  background-color: rgb(0, 71, 73);
+}
+
+.blackground {
+  background-color: rgb(19, 19, 19);
 }
 
 .topnav {
@@ -84,20 +94,22 @@ body {
 
   gtag('config', 'G-DGG831PPRZ');
 </script>
-<div class="topnav">
+<div class="topnav" id="topnav">
   <a href="index.html"><i class="fas fa-home"></i> Home</a>
   <a href="dogs-and-stuff.html"><i class="fas fa-dog"></i> Dogs and stuff</a>
   <a href="https://www.youtube.com/thediamondk"><i class="fab fa-youtube"></i> Youtube</a>
   <a href="https://discord.gg/BAAy4Yh"><i class="fab fa-discord"></i> Discord</a>
   <a href="games.html"><i class="fas fa-gamepad-alt"></i> Games</a>
 
-  <body style="background-color: rgb(0, 71, 73);">
+  
   
 </div>
 
 <div class="iframe-container">
 <iframe src="https://uploads.ungrounded.net/alternate/1528000/1528775_alternate_113347_r87.zip/?NewgroundsAPI_PublisherID=1&amp;NewgroundsAPI_SandboxID=607cade7afa42&amp;NewgroundsAPI_SessionID=&amp;NewgroundsAPI_Username=%26It%3Bdeleted%26gt%3B&amp;NewgroundsAPI_UserID=0&amp;ng_username=%26It%3Bdeleted%36gt" height="540" width="1000" style="border:none;"></iframe>
 </div>
+
+<br>
 
 <h1>By the way...</h1>
 <h2>Week 7 story mode does <span style="color: red;">not</span> work but freeplay <span style="color: lime;">does!</span></h2>
@@ -109,6 +121,13 @@ body {
 
 <script>function Fullscreen() {
   document.getElementsByTagName("iframe")[0].className = "fullScreen";
+  document.getElementsByTagName("body")[0].className = "blackground";
+  var x = document.getElementById("topnav"); 
+  if (x.style.display === "none") {
+    x.style.display = "none"
+  } else {
+    x.style.display = "none";
+  }
 }
 </script>
 
@@ -117,8 +136,17 @@ body {
     switch (event.key) {
         case "Escape":
         document.getElementsByTagName("iframe")[0].className = "normal";
+        document.getElementsByTagName("body")[0].className = "body";
+        var x = document.getElementById("topnav"); 
+        if (x.style.display === "block") {
+    x.style.display = "block"
+  } else {
+    x.style.display = "block";
+  }
             }
         })
   </script>
+
+
 
 </html>
