--- a/Whitty.html
+++ b/Whitty.html
@@ -13,11 +13,11 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
 
 .fullScreen {
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 5%;
+    left: 5%;
 }
 
 .normal {
@@ -67,6 +67,17 @@ body {
   font-family: Quicksand;
 }
 
+body {
+  color: #00fff2;
+  margin: 0;
+  font-family: Quicksand;
+  background-color: rgb(0, 71, 73);
+}
+
+.blackground {
+  background-color: rgb(19, 19, 19);
+}
+
 .topnav {
   overflow: hidden;
   background-color: rgb(0, 57, 59);
@@ -103,14 +114,13 @@ body {
 
   gtag('config', 'G-DGG831PPRZ');
 </script>
-<div class="topnav">
+<div class="topnav" id="topnav">
     <a href="index.html"><i class="fas fa-home"></i> Home</a>
     <a href="dogs-and-stuff.html"><i class="fas fa-dog"></i> Dogs and stuff</a>
     <a href="https://www.youtube.com/thediamondk"><i class="fab fa-youtube"></i> Youtube</a>
     <a href="https://discord.gg/BAAy4Yh"><i class="fab fa-discord"></i> Discord</a>
     <a href="games.html"><i class="fas fa-gamepad-alt"></i> Games</a>
 
-  <body style="background-color: rgb(0, 71, 73);">
   
 </div>
 
@@ -120,6 +130,7 @@ body {
 
 
 
+<br>
 <br>
 
 <center><form action="https://gamebanana.com/gamefiles/14457">
@@ -132,6 +143,13 @@ body {
 
 <script>function Fullscreen() {
   document.getElementsByTagName("iframe")[0].className = "fullScreen";
+  document.getElementsByTagName("body")[0].className = "blackground";
+  var x = document.getElementById("topnav"); 
+  if (x.style.display === "none") {
+    x.style.display = "none"
+  } else {
+    x.style.display = "none";
+  }
 }
 </script>
 
@@ -140,6 +158,13 @@ body {
     switch (event.key) {
         case "Escape":
         document.getElementsByTagName("iframe")[0].className = "normal";
+        document.getElementsByTagName("body")[0].className = "body";
+        var x = document.getElementById("topnav"); 
+        if (x.style.display === "block") {
+    x.style.display = "block"
+  } else {
+    x.style.display = "block";
+  }
             }
         })
   </script>
