--- a/Whitty.html
+++ b/Whitty.html
@@ -3,7 +3,7 @@
 <html prefix="og: https://ogp.me/ns#">
 <meta charset="utf=8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>FNF Week 7</title>
+<title>Whitty</title>
 <meta property="og:title" content="Whitty" />
 <head>
   <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
@@ -34,7 +34,7 @@
   }
 
   p, h1, h2, h3, h4, h5, h6, div{
-  font: Quicksand;
+  font-family: Quicksand;
   color: #00fff2;
   text-align: center;
 }
