--- a/Sky.html
+++ b/Sky.html
@@ -3,17 +3,14 @@
 <html prefix="og: https://ogp.me/ns#">
 <meta charset="utf=8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>FNF Week 7</title>
-<meta property="og:title" content="FNF Week 7" />
+<title>Sky</title>
+<meta property="og:title" content="Whitty" />
 <head>
   <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
   <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
 <style>
 
-
-
-
-
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
 
 .fullScreen {
     width: 90%;
@@ -30,7 +27,6 @@
       height: 540px;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Quicksand');
   
 .iframe-container {
 		text-align:center;
@@ -38,13 +34,37 @@
   }
 
   p, h1, h2, h3, h4, h5, h6, div{
-  font-family: Quicksand;
+  font: Quicksand;
   color: #00fff2;
   text-align: center;
 }
 
 button {
     margin-bottom: 1%;
+}
+
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.button1 {border-radius: 2px;}
+.button2 {border-radius: 4px;}
+.button3 {border-radius: 8px;}
+.button4 {border-radius: 12px;}
+.button5 {border-radius: 50%;}
+
+body {
+  margin: 0;
+  font-family: Quicksand;
 }
 
 body {
@@ -95,25 +115,27 @@ body {
   gtag('config', 'G-DGG831PPRZ');
 </script>
 <div class="topnav" id="topnav">
-  <a href="index.html"><i class="fas fa-home"></i> Home</a>
-  <a href="dogs-and-stuff.html"><i class="fas fa-dog"></i> Dogs and stuff</a>
-  <a href="https://www.youtube.com/thediamondk"><i class="fab fa-youtube"></i> Youtube</a>
-  <a href="https://discord.gg/BAAy4Yh"><i class="fab fa-discord"></i> Discord</a>
-  <a href="games.html"><i class="fas fa-gamepad-alt"></i> Games</a>
+    <a href="index.html"><i class="fas fa-home"></i> Home</a>
+    <a href="dogs-and-stuff.html"><i class="fas fa-dog"></i> Dogs and stuff</a>
+    <a href="https://www.youtube.com/thediamondk"><i class="fab fa-youtube"></i> Youtube</a>
+    <a href="https://discord.gg/BAAy4Yh"><i class="fab fa-discord"></i> Discord</a>
+    <a href="games.html"><i class="fas fa-gamepad-alt"></i> Games</a>
 
-  
   
 </div>
 
 <div class="iframe-container">
-<iframe src="https://uploads.ungrounded.net/alternate/1528000/1528775_alternate_113347_r87.zip/?NewgroundsAPI_PublisherID=1&amp;NewgroundsAPI_SandboxID=607cade7afa42&amp;NewgroundsAPI_SessionID=&amp;NewgroundsAPI_Username=%26It%3Bdeleted%26gt%3B&amp;NewgroundsAPI_UserID=0&amp;ng_username=%26It%3Bdeleted%36gt" height="540" width="1000" style="border:none;"></iframe>
+<iframe src="https://v6p9d9t4.ssl.hwcdn.net/html/3637819/bin/index.html" height="540" width="1000" style="border:none;"></iframe>
 </div>
 
+
+
+<br>
 <br>
 
-<h1>By the way...</h1>
-<h2>Week 7 story mode does <span style="color: red;">not</span> work but freeplay <span style="color: lime;">does!</span></h2>
-
+<center><form action="https://gamebanana.com/gamefiles/19972">
+  <input type="submit" value="Link to mod" />
+</form></center>
 
 <br>
 
@@ -146,7 +168,5 @@ body {
             }
         })
   </script>
-
-
 
 </html>
