--- a/games.html
+++ b/games.html
@@ -95,6 +95,7 @@ body {
 <a href="Week7Beta.html"><h3>FNF Week 7</h3></a>
 <a href="Whitty.html"><h3>FNF Whitty</h3></a>
 <a href="FactoryBalls.html"><h3>FactoryBalls</h3></a>
+<a href="Sky.html"><h3>Sky <span style="color: rgb(251, 255, 0);">(NEW!)</span></h3></a>
 
 <h5>if the games are running bad, try turning on <a href="https://www.howtogeek.com/412738/how-to-turn-hardware-acceleration-on-and-off-in-chrome/" target="_blank""><span style="color: #00fff2;"><u>hardware acceleration</u></span></a></h5>
 
